fix layout issue

--- a/src/components/crowdsource-manager/crowdsource-manager.css
+++ b/src/components/crowdsource-manager/crowdsource-manager.css
@@ -178,3 +178,7 @@
 .position-fixed {
   position: fixed;
 }
+
+.border-width-0 {
+  border-width: 0px;
+}
