--- a/src/components/info-card/info-card.css
+++ b/src/components/info-card/info-card.css
@@ -75,10 +75,6 @@
   height: 40px;
 }
 
-.padding-top-46 {
-  padding-top: 46px;
-}
-
 .end-border {
   border-inline-end: 1px solid var(--calcite-color-border-1);
 }
@@ -94,4 +90,8 @@
 
 .padding-inline-start-1 {
   padding-inline-start: 1rem;
+}
+
+.border-width-0 {
+  border-width: 0px;
 }
